# Data-Science-Internship

Week 1/: Week1-Report.docx  Week1-Report.md
Week 1/Lab_1/: README-lab1.md  lab1-getting-you-started.ipynb
Week 1/Lab_2/: README-lab2.md  lab2-reviewing-syntax.ipynb
Week 1/Lab_3/: README-lab3.md  english.txt  lab3-strings.ipynb
Week 1/Lab_4/: README-lab4.md  lab4-list-tuples-and-dicts.ipynb
Week 1/Lab_5/: README-lab5.md  lab5-functions.ipynb
Week 1/Lab_6/: README-lab6.md  lab6_oop_basics.ipynb
Week 2/Lab8-9/: .gitignore  README.md  lab8-9-ecosystem.ipynb  pyproject.toml
Week 2/Lab8-9/src/: monkey_classif.py  monkey_model.py  tests.py
