[project]
name = "lab8-9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cycler==0.10.0",
    "kiwisolver==1.3.1",
    "matplotlib==3.3.3",
    "numpy==1.19.5",
    "pandas==1.1.5",
    "pillow==8.1.0",
    "pyparsing==2.4.7",
    "python-dateutil==2.8.1",
    "pytz==2020.5",
    "six==1.15.0",
]
